# lab-10

backend/: database.py  main.py  models.py  pyproject.toml  schemas.py  todolist.db
frontend/: package-lock.json  package.json
frontend/src/: App.js
